fixing alignment by a few pixels

--- a/challenges.css
+++ b/challenges.css
@@ -40,6 +40,10 @@
 	margin-top: 130px;
 }
 
+#logRadioPart {
+	margin-left: 10px;
+}
+
 .group-section {
 	margin-bottom: 20px;
 }
@@ -109,7 +113,7 @@ details > summary{
 	width: 400px;
 }
 #logAddMsg{
-	margin-left: 170px;
+	margin-left: 169px;
 	margin-top: -35px;
 	width: 400px;
 }
@@ -132,7 +136,7 @@ details > summary{
 	display: block;
 }
 #logShare{
-	margin-left: 10px;
+	margin-left: 8px;
 }
 #logRadioAll{
 	margin-top: 20px;
